<resources>
  <string name="languages">Hungarian</string>
  <string name="id">hu</string>
  <string name="accounts">Fiókok</string>
  <string name="add_account">Fiók hozzáadása</string>
  <string name="addres">Cím</string>
  <string name="all_countries">Összes ország</string>
  <string name="all_fields_mandatory">Minden mező kitöltése kötelező!</string>
  <string name="app_id">1,29019599766351E+15</string>
  <string name="app_name">Festival4ever</string>
  <string name="attend">Ott leszel</string>
  <string name="based_on_reviews">értékelések alapján</string>
  <string name="be_attending">Ott lesznek</string>
  <string name="birth_date">Születési idő</string>
  <string name="birth_date_1">Születési dátum</string>
  <string name="cancel_attend">Mégsem leszek ott</string>
  <string name="change_email_account">E-mail fiók cseréje</string>
  <string name="check_internet">Ellenőrizd az internet kapcsolatodat majd próbáld újra.</string>
  <string name="client_id">337355848591-do6pvus7729cs96k55gf8gds8ihs5gni.apps.googleusercontent.com</string>
  <string name="connected_face">Sikeresen csatoltad Facebook fiókodat.</string>
  <string name="connected_twitter">Sikeresen csatoltad Twitter fiókodat.</string>
  <string name="country">Ország</string>
  <string name="crash_report">Összeomlási jelentés</string>
  <string name="crash_report_saved">Sikeresen mentésre került az összeomlás jelentés</string>
  <string name="deleted">Törölve</string>
  <string name="done">Sikerült!</string>
  <string name="dutch">Holland</string>
  <string name="edit_data">Adatok szerkesztése</string>
  <string name="email">Email</string>
  <string name="email_address_already">Ezzel az email címmel már regisztrált valaki</string>
  <string name="email_already_used">Az email cím már használatban van</string>
  <string name="email_change">Email megváltoztatása</string>
  <string name="email_change_need_activate">Sikeres emailcsere kérelem. Nincs más dolgod, mint aktiválni az új email címed</string>
  <string name="email_change_success">Sikeresen megváltoztattad az email címed</string>
  <string name="email_change_time">Kevesebb, mint 12 órája igényeltél emailcserét</string>
  <string name="email_not_activated">Az email cím még nem lett aktiválva.</string>
  <string name="email_you_not_have">Még nem rendelkezel email címmel, kérlek, előbb azt add meg</string>
  <string name="emial_error_notexist">A megadott email cím nem található a rendszerünkben.</string>
  <string name="english">Angol</string>
  <string name="error">Hiba</string>
  <string name="facebook_added_success">Sikeresen csatoltad a Facebookod</string>
  <string name="facebook_already_added">Már van Facebook csatolva a fiókodhoz</string>
  <string name="facebook_already_used">Már más használja ezt a Facebook fiókot!</string>
  <string name="facebook_email_already_used">Az email cím amit a Facebookhoz használsz, már használatban van a rendszerben</string>
  <string name="favorite_festivals">Kedvenc fesztiváljaid</string>
  <string name="favorite_her_festivals">Kedvenc fesztiváljai</string>
  <string name="female">Lány</string>
  <string name="festival_added_favorite">Fesztivál hozzáadva a kedvenceidhez</string>
  <string name="festival_followed">Fesztivál követve</string>
  <string name="festival_no_event">Ez a fesztivál még egy eseménnyel sem rendelkezik.</string>
  <string name="festival_no_exist">Nincs ilyen fesztivál</string>
  <string name="festival_no_system">Még egy fesztivál sincs a rendszerben</string>
  <string name="festival_point_limit">Maximum %1$d pontot helyezhetsz el egy fesztiválesemény térképen</string>
  <string name="festival_remove_favorite">Fesztivál eltávolítva a kedvenceid közül</string>
  <string name="festival_unfollowed">Fesztivál követésének törlése</string>
  <string name="festivals_attending">Fesztiválok, amiken részt veszel</string>
  <string name="festivals_her_attending">Fesztiválok, amiken részt vesz</string>
  <string name="festivals_list">Fesztiválok listája</string>
  <string name="first">Első</string>
  <string name="first_name">Keresztnév</string>
  <string name="follow">Követed</string>
  <string name="follower">követő</string>
  <string name="forgot_password">Elfelejtetted a jelszavad?</string>
  <string name="friend_already">Már barátok vagytok</string>
  <string name="friend_already_marked">Már barátnak jelölted</string>
  <string name="friend_deleted">Barátság törölve</string>
  <string name="friend_marked_success">Sikeresen barátnak jelölted</string>
  <string name="friend_marked_you_1">Barátnak jelölt</string>
  <string name="friend_request_no">Nincs baráti felkérésed</string>
  <string name="friends">Barátok</string>
  <string name="friends_1">Barátai</string>
  <string name="friends_accepted">Barátság elfogadva</string>
  <string name="friends_added">Barátok hozzáadva</string>
  <string name="friends_attending">Ismerősök, akik ott lesznek:</string>
  <string name="friends_marked">Barátnak jelölted</string>
  <string name="friends_pin">Barátaiddal közös PIN-ek bekapcsolása</string>
  <string name="friends_youare">Barátok vagytok</string>
  <string name="gcm_key">337355848591</string>
  <string name="gender">Nem</string>
  <string name="gender_select">Nem választás</string>
  <string name="german">Német</string>
  <string name="gmaps_api_key">AIzaSyAlG4A_Y9DzQ8MjTz6vo9HWIIpuYSmDP2w</string>
  <string name="google_app_id">337355848591</string>
  <string name="have_no_friends">Jelenleg nincsenek barátaid</string>
  <string name="havent_added_favorite_festival">Még nem adtál meg egy fesztivált sem kedvencként.</string>
  <string name="havent_her_added_favorite_festival">%1$s még nem adott meg egy fesztivált sem kedvencként.</string>
  <string name="havent_her_marked_festival">%1$s még nem adott meg egy fesztivált sem, amin részt vesz.</string>
  <string name="havent_marked_festival">Még nem adtál meg egy fesztivált sem, amin részt veszel.</string>
  <string name="her_friend">%1$s barátai</string>
  <string name="hungarian">Magyar</string>
  <string name="incorrect_email_password">Rossz email cím vagy jelszó</string>
  <string name="invite_limit_point">Maximum %1$d embert invitálhatsz egy ponthoz</string>
  <string name="language">Nyelv</string>
  <string name="last_name">Vezetéknév</string>
  <string name="liked">Kedveled</string>
  <string name="likes">kedvelő</string>
  <string name="loading">Betöltés...</string>
  <string name="location">Lokáció</string>
  <string name="login">Bejelentkezés</string>
  <string name="login_success_ful">Sikeresen beléptél!</string>
  <string name="logout">Kijelentkezés</string>
  <string name="logout_">Kilépés</string>
  <string name="logout_success">Sikeresen kijelentkeztél</string>
  <string name="male">Fiú</string>
  <string name="map">Térkép</string>
  <string name="mark_friend">Megjelölés ismerősnek</string>
  <string name="marked_friend_">Ismerősnek jelölted</string>
  <string name="marked_friend">Általad barátnak jelölt</string>
  <string name="marked_you_friend">Ismerősnek jelölt</string>
  <string name="name">Elnevezés</string>
  <string name="need_min_search_char">Legalább %1$d karaktert kell beírnod a kereséshez</string>
  <string name="network_error">Hálózati hiba</string>
  <string name="new_email_address">Új email címed</string>
  <string name="no_confirmed_connection">Jelenleg nincsenek vissza nem igazolt kapcsolataid.</string>
  <string name="no_friends_">Még nincsenek barátaid</string>
  <string name="no_friends">Még nincsenek barátaid</string>
  <string name="no_friends_added">Még nem lettek barátok hozzáadva.</string>
  <string name="no_friends_attend">Egy ismerősöd sem jelölte még be, hogy ott lesz.</string>
  <string name="no_her_friends">Még nincsenek barátai</string>
  <string name="no_performers_this_event">Ehhez az eseményhez még egy fellépő sem lett bejegyezve</string>
  <string name="no_such_user">Nincs ilyen felhasználó.</string>
  <string name="not_attend">Nem leszel ott</string>
  <string name="not_attend_1">Nem leszek ott</string>
  <string name="not_confirmed">Általad vissza nem igazolt</string>
  <string name="not_follow">Nem követed</string>
  <string name="not_found">Nincs találat. Próbáld meg másik kulcsszóval.</string>
  <string name="not_friends">Nem vagytok barátok</string>
  <string name="not_liked">Még nem kedveled</string>
  <string name="note">Megjegyzés</string>
  <string name="notif_add_location">Lokációhoz adtak</string>
  <string name="notif_added_friend">Barátnak jelöléskor</string>
  <string name="notif_confirmation">Visszaigazoláskor</string>
  <string name="notif_event_change">Esemény megváltozott</string>
  <string name="notif_face_twitter_friend">Értesítés abban az esetben, ha egy Facebook vagy Twitter ismerősöd regisztrál az alkalmazásban.</string>
  <string name="notif_friends_event">Barátom eseménye</string>
  <string name="notif_friends_go_event">Értesítés abban az esetben, ha a barátod részt vesz valamelyik eseményen.</string>
  <string name="notif_if_add_friend">Értesítsen abban az esetben, ha valaki barátnak jelöl.</string>
  <string name="notif_if_event_change">Értesítés abban az esetben, ha egy esemény megváltozott, amin ott leszel.</string>
  <string name="notif_if_friend_conf">Értesítsen abban az esetben, ha valakit barátnak jelöltél és vissza igazolja azt.</string>
  <string name="notif_if_performance_change">Értesítsen abban az esetben, ha egy általad bejelölt (ott leszek) fellépéssel kapcsolatban változás történ.</string>
  <string name="notif_if_recommend_event">Értesítsen abban az esetben, ha a rendszer tud ajánlani neked egy fesztivál eseményt.</string>
  <string name="notif_if_recommend_fest">Értesítsen abban az esetben, ha a rendszer tud ajánlani neked egy fesztivált.</string>
  <string name="notif_if_Recommend_performance">Értesítsen abban az esetben, ha a rendszer tud ajánlani neked egy fellépést.</string>
  <string name="notif_new_possible_friend">Új lehetséges ismerős</string>
  <string name="notif_performance_change">Fellépés megváltozott</string>
  <string name="notif_recommend_event">Esemény ajánlása</string>
  <string name="notif_recommend_fest">Fesztivál ajánlása</string>
  <string name="notif_recommend_performance">Fellépés ajánlása</string>
  <string name="notif_some_add_location">Értesítsen abban az esetben, ha valaki hozzá adott a térképen egy ponthoz.</string>
  <string name="notif_time">Értesítési idő</string>
  <string name="notif_time_text_">Mennyi idővel értesítsen a fellépés előtt.</string>
  <string name="notif_time_text">Kezdődik: „%1$s” %2$d óra %3$d perc múlva</string>
  <string name="notification">Értesítések</string>
  <string name="notification_management">Értesítések kezelése</string>
  <string name="off">Ki</string>
  <string name="ok">ok</string>
  <string name="on">Be</string>
  <string name="or_login_using">Vagy jelentkezz be az alábbiakkal</string>
  <string name="our_tent">A mi kis sátrunk...</string>
  <string name="participant">résztvevő</string>
  <string name="password">Jelszó</string>
  <string name="password_again">Jelszó újra</string>
  <string name="password_change">Jelszó megváltoztatása</string>
  <string name="password_forgot">Elfelejtett jelszó</string>
  <string name="password_new">Új jelszó</string>
  <string name="pending_connection">Függőben lévő kapcsolataid</string>
  <string name="pin_drop">PIN lerakása</string>
  <string name="pin_features">PIN jellemzői</string>
  <string name="save">Mentés</string>
  <string name="search_new_friends">Új barátok keresése</string>
  <string name="select_pin">Válasz PIN-t</string>
    <string name="pin_name">Elnevezés</string>
    <string name="pin_name_hint">Név megadása</string>
    <string name="pin_description">Megjegyzés</string>
    <string name="pin_description_hint">Megjegyzés megadása</string>
    <string name="pin_add_friends">Barátok hozzáadása</string>
    <string name="pin_add_friends_hint">Kezdj el írni egy nevet</string>
</resources>