<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:layout_gravity="center"
        android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_forgot"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/input_color"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/inputs"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/email_icon"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="|"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textColor="@color/white_overlay"
            android:layout_weight=".10"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:scaleX="0.5"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/tw__light_gray"
            android:id="@+id/emailInput"
            android:textColor="@color/input_color"
            android:layout_weight=".90"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

    </LinearLayout>



    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/password_new"
        android:id="@+id/sendemail"
        android:background="@drawable/buttons"
        android:stateListAnimator="@anim/lift_on_touch"
        android:layout_gravity="center"
        android:textColor="@color/input_color"
        android:layout_marginTop="30dp"
        android:elevation="50dp"/>

    </LinearLayout>
</FrameLayout>