<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_actionbar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/header"
                    android:text="@string/friends"
                    android:gravity="center"
                    android:textColor="@color/input_color"
                    android:textSize="25sp"
                    android:padding="5dp"/>
                
                <GridView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:numColumns="4"
                    android:layout_margin="15dp"
                    android:id="@+id/friends_list"/>

                <Button
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_new_friends"
                    android:id="@+id/new_friends"
                    android:background="@drawable/buttons"
                    android:stateListAnimator="@anim/lift_on_touch"
                    android:layout_gravity="center"
                    android:textColor="@color/input_color"
                    android:layout_marginTop="10dp"
                    android:elevation="50dp"/>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pending_connection"
                    android:textColor="@color/input_color"
                    android:textSize="16sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_confirmed"
                            android:textColor="@color/input_color"
                            android:textSize="12sp"
                            android:background="@drawable/friend_request_bg"
                            android:padding="5dp"/>

                        <it.sephiroth.android.library.widget.HListView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/your_friend_request_list"
                            android:divider="@color/transparent"
                            android:listSelector="#00000000"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marked_friend"
                            android:textColor="@color/input_color"
                            android:textSize="12sp"
                            android:background="@drawable/friend_request_bg"
                            android:padding="5dp"/>

                        <it.sephiroth.android.library.widget.HListView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/friend_request_list"
                            android:divider="@color/transparent"
                            android:listSelector="#00000000"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
    <eu.fest.view.ScrimInsetsFrameLayout
        android:id="@+id/scrimInsetsFrameLayout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:insetForeground="#4000"
        android:elevation="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <fragment
            android:id="@+id/fragment_drawer"
            android:name="eu.fest.fragments.NavigationDrawerFragment"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/leftmenu_fragment"
            tools:layout="@layout/leftmenu_fragment" />
    </eu.fest.view.ScrimInsetsFrameLayout>
</android.support.v4.widget.DrawerLayout>
